--- a/University-CRM.API/Properties/launchSettings.json
+++ b/University-CRM.API/Properties/launchSettings.json
@@ -9,12 +9,12 @@
     }
   },
   "profiles": {
-    "http": {
+    "University-CRM.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5064",
+      "applicationUrl": "https://localhost:7075;http://localhost:5216",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
