add CRUD operation for Collage

--- a/University-CRM.Application/University-CRM.Application.csproj
+++ b/University-CRM.Application/University-CRM.Application.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="7.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.5" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Common\Extentions\" />
+    <Folder Include="Features\Collages\Models\" />
   </ItemGroup>
 
 </Project>
